[gd_scene load_steps=2 format=3 uid="uid://bmoduleviewer"]

[ext_resource type="Script" path="res://Scripts/UI/ModuleViewer.gd" id="1_moduleviewer"]

[node name="ModuleViewer" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_moduleviewer")

[node name="Background" type="ColorRect" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0.05, 0.05, 0.05, 1)

[node name="Container" type="VBoxContainer" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 20.0
offset_top = 20.0
offset_right = -20.0
offset_bottom = -20.0
grow_horizontal = 2
grow_vertical = 2

[node name="Header" type="Panel" parent="Container"]
layout_mode = 2
custom_minimum_size = Vector2(0, 80)
modulate = Color(0.2, 1, 0.2, 0.3)

[node name="Title" type="Label" parent="Container/Header"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -100.0
offset_top = -20.0
offset_right = 100.0
offset_bottom = 20.0
grow_horizontal = 2
grow_vertical = 2
theme_override_colors/font_color = Color(0.2, 1, 0.2, 1)
theme_override_font_sizes/font_size = 24
text = "MODULE DATABASE"
horizontal_alignment = 1
vertical_alignment = 1

[node name="TypeButtons" type="HBoxContainer" parent="Container"]
layout_mode = 2
alignment = 1

[node name="CoreButton" type="Button" parent="Container/TypeButtons"]
layout_mode = 2
size_flags_horizontal = 3
theme_override_colors/font_color = Color(0.2, 1, 0.2, 1)
theme_override_colors/font_pressed_color = Color(0, 0, 0, 1)
theme_override_colors/font_hover_color = Color(0.4, 1, 0.4, 1)
text = "[1] CORES"

[node name="BehaviorButton" type="Button" parent="Container/TypeButtons"]
layout_mode = 2
size_flags_horizontal = 3
theme_override_colors/font_color = Color(0.2, 1, 0.2, 1)
theme_override_colors/font_pressed_color = Color(0, 0, 0, 1)
theme_override_colors/font_hover_color = Color(0.4, 1, 0.4, 1)
text = "[2] BEHAVIORS"

[node name="AugmentButton" type="Button" parent="Container/TypeButtons"]
layout_mode = 2
size_flags_horizontal = 3
theme_override_colors/font_color = Color(0.2, 1, 0.2, 1)
theme_override_colors/font_pressed_color = Color(0, 0, 0, 1)
theme_override_colors/font_hover_color = Color(0.4, 1, 0.4, 1)
text = "[3] AUGMENTS"

[node name="ModuleInfo" type="HBoxContainer" parent="Container"]
layout_mode = 2

[node name="ModuleTypeLabel" type="Label" parent="Container/ModuleInfo"]
layout_mode = 2
size_flags_horizontal = 3
theme_override_colors/font_color = Color(0.2, 1, 0.2, 1)
text = "TYPE: CORE"

[node name="ModuleCountLabel" type="Label" parent="Container/ModuleInfo"]
layout_mode = 2
theme_override_colors/font_color = Color(0.2, 1, 0.2, 1)
text = "[1/5]"
horizontal_alignment = 2

[node name="ScrollContainer" type="ScrollContainer" parent="Container"]
layout_mode = 2
size_flags_vertical = 3

[node name="ModuleDisplay" type="RichTextLabel" parent="Container/ScrollContainer"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3
theme_override_colors/default_color = Color(0.2, 1, 0.2, 1)
theme_override_colors/font_shadow_color = Color(0.2, 1, 0.2, 0.3)
theme_override_constants/shadow_offset_x = 2
theme_override_constants/shadow_offset_y = 2
theme_override_font_sizes/normal_font_size = 16
bbcode_enabled = true
text = "LOADING MODULE DATABASE..."

[node name="Navigation" type="HBoxContainer" parent="Container"]
layout_mode = 2
alignment = 1

[node name="PreviousButton" type="Button" parent="Container/Navigation"]
layout_mode = 2
size_flags_horizontal = 3
theme_override_colors/font_color = Color(0.2, 1, 0.2, 1)
theme_override_colors/font_pressed_color = Color(0, 0, 0, 1)
theme_override_colors/font_hover_color = Color(0.4, 1, 0.4, 1)
text = "< PREVIOUS [A]"

[node name="NextButton" type="Button" parent="Container/Navigation"]
layout_mode = 2
size_flags_horizontal = 3
theme_override_colors/font_color = Color(0.2, 1, 0.2, 1)
theme_override_colors/font_pressed_color = Color(0, 0, 0, 1)
theme_override_colors/font_hover_color = Color(0.4, 1, 0.4, 1)
text = "NEXT [D] >"

[node name="Instructions" type="Label" parent="Container"]
layout_mode = 2
theme_override_colors/font_color = Color(0.5, 0.5, 0.5, 1)
theme_override_font_sizes/font_size = 12
text = "Use Arrow Keys or A/D to navigate. Press 1/2/3 to switch module types."
horizontal_alignment = 1

[node name="BackButton" type="Button" parent="Container"]
layout_mode = 2
theme_override_colors/font_color = Color(0.5, 0.5, 0.5, 1)
theme_override_colors/font_hover_color = Color(0.7, 0.7, 0.7, 1)
text = "< BACK TO TERMINAL [ESC]"